# docs/swagger.json
@@ -248,6 +248,33 @@
                 }
             }
         },
+        "/inference": {
+            "post": {
+                "tags": [
+                    "Inference"
+                ],
+                "summary": "infer without login",
+                "parameters": [
+                    {
+                        "description": "json",
+                        "name": "json",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/record.InferenceRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/record.InferenceResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/login": {
             "post": {
                 "description": "Login with email and password, return jwt token, not need jwt",
@@ -727,6 +754,33 @@
                     }
                 }
             }
+        },
+        "/ws/inference": {
+            "get": {
+                "tags": [
+                    "Websocket"
+                ],
+                "summary": "infer without login in websocket",
+                "parameters": [
+                    {
+                        "description": "json",
+                        "name": "json",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/record.InferenceRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/record.InferenceResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -918,6 +972,17 @@
                 }
             }
         },
+        "models.RecordModel": {
+            "type": "object",
+            "properties": {
+                "request": {
+                    "type": "string"
+                },
+                "response": {
+                    "type": "string"
+                }
+            }
+        },
         "models.User": {
             "type": "object",
             "properties": {
@@ -957,6 +1022,29 @@
             ],
             "properties": {
                 "request": {
+                    "type": "string"
+                }
+            }
+        },
+        "record.InferenceRequest": {
+            "type": "object",
+            "properties": {
+                "records": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.RecordModel"
+                    }
+                },
+                "request": {
+                    "type": "string",
+                    "minLength": 1
+                }
+            }
+        },
+        "record.InferenceResponse": {
+            "type": "object",
+            "properties": {
+                "response": {
                     "type": "string"
                 }
             }
